# feredis

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: item.rs
server/: Cargo.toml
server/src/: expire.rs  main.rs
src/: blocking.rs  expire.rs  item.rs  main.rs
