[package]
name = "feredis-server"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gvilums/feredis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
feredis-core = { path = "../core" }
smol = "1.3.0"
